@@ -10,6 +10,7 @@ import com.grup14.luterano.request.materia.MateriaUpdateRequest;
 import com.grup14.luterano.response.Materia.MateriaResponse;
 import com.grup14.luterano.response.Materia.MateriaResponseList;
 import com.grup14.luterano.service.MateriaService;
+import jakarta.transaction.Transactional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -20,88 +21,85 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 @Service
 public class MateriaServiceImpl implements MateriaService {
-    @Autowired
-    private MateriaRepository materiaRepository;
+
+    private final MateriaRepository materiaRepository;
     private final Logger logger = LoggerFactory.getLogger(MateriaServiceImpl.class);
 
-    @Override
+    public MateriaServiceImpl(MateriaRepository materiaRepository){
+        this.materiaRepository=materiaRepository;
+    }
+
+
+    @Transactional
     public MateriaResponse crearMateria(MateriaRequest materiaRequest) {
-        Materia materia = new Materia();
-        materia.setNombreMateria(materiaRequest.getNombreMateria());
-        materia.setDescipcion(materiaRequest.getDescripcion());
-        materia.setNivel(materiaRequest.getNivel());
-        materia.setCursos(null); // no se asigna en este paso
-        Optional<Materia> existente = materiaRepository.findByNombreMateria(materia.getNombreMateria());
-        if(existente.isPresent()){
-            throw new MateriaException("Ya existe una materia con ese nombre");
+        // Validar que no exista otra materia con mismo nombre
+        boolean exists = materiaRepository.existsByNombre(materiaRequest.getNombre());
+        if (exists) {
+            throw new RuntimeException("Ya existe una materia con ese nombre");
         }
-        materiaRepository.save(materia);
 
-        logger.info("Materia creada: {}", materia.getNombreMateria());
+        Materia materia = Materia.builder()
+                .nombre(materiaRequest.getNombre())
+                .descripcion(materiaRequest.getDescripcion())
+                .nivel(materiaRequest.getNivel())
+                .build();
 
+        materia = materiaRepository.save(materia);
         return MateriaResponse.builder()
-                .code(0)
-                .mensaje("Materia creada correctamente")
                 .materiaDto(MateriaMapper.toDto(materia))
+                .code(0)
+                .mensaje("Se creo correctamente la materia")
                 .build();
     }
 
-    @Override
-    public MateriaResponse updateMateria(MateriaUpdateRequest request) {
-        Materia materia = materiaRepository.findById(request.getId())
-                .orElseThrow(() -> new MateriaException("No se encontró la materia con ID: " + request.getId()));
+    @Transactional
+    public MateriaResponse updateMateria(MateriaUpdateRequest materiaUpdateRequest) {
+        Materia materia = materiaRepository.findById(materiaUpdateRequest.getId())
+                .orElseThrow(() -> new RuntimeException("Materia no encontrada"));
 
-        if (!request.getNombreMateria().isEmpty()) {
-            materia.setNombreMateria(request.getNombreMateria());
+        if (materiaUpdateRequest.getNombreMateria() != null) {
+            materia.setNombre(materiaUpdateRequest.getNombreMateria());
+        }
+        if (materiaUpdateRequest.getDescripcion() != null) {
+            materia.setDescripcion(materiaUpdateRequest.getDescripcion());
+        }
+        if (materiaUpdateRequest.getNivel() != null) {
+            materia.setNivel(materiaUpdateRequest.getNivel());
         }
 
-        if (!request.getDescripcion().isEmpty()) {
-            materia.setDescipcion(request.getDescripcion());
-        }
-
-        if (request.getNivel()!=null) {
-            materia.setNivel(request.getNivel());
-        }
-
-        materiaRepository.save(materia);
-
-        logger.info("Materia actualizada: {}", materia.getNombreMateria());
-
+        materia = materiaRepository.save(materia);
         return MateriaResponse.builder()
-                .code(0)
-                .mensaje("Materia actualizada correctamente")
                 .materiaDto(MateriaMapper.toDto(materia))
+                .code(0)
+                .mensaje("Se actualizo correctamente la materia")
                 .build();
     }
 
-    @Override
     public MateriaResponseList listarMaterias() {
         List<Materia> materias = materiaRepository.findAll();
 
-        List<MateriaDto> materiaDtos = materias.stream()
+        List<MateriaDto> materiasDto = materias.stream()
                 .map(MateriaMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
 
-        return MateriaResponseList.builder()
-                .code(0)
-                .mensaje("Listado de materias")
-                .materiasDto(materiaDtos)
-                .build();
+        return new MateriaResponseList(
+                materiasDto,
+                0,
+                "Lista de materias obtenida correctamente"
+        );
     }
 
-    @Override
+    @Transactional
     public MateriaResponse borrarMateria(Long id) {
         Materia materia = materiaRepository.findById(id)
-                .orElseThrow(() -> new MateriaException("No se encontró la materia con ID: " + id));
+                .orElseThrow(() -> new RuntimeException("Materia no encontrada"));
 
         materiaRepository.delete(materia);
-
-        logger.info("Materia eliminada: {}", materia.getNombreMateria());
-
         return MateriaResponse.builder()
+                .materiaDto(null)
                 .code(0)
-                .mensaje("Materia eliminada correctamente")
-                .materiaDto(new MateriaDto())
+                .mensaje("Se elimino correctamente la materia")
                 .build();
     }
 }
+
